--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
-[build]
-  command = "unzip -o linkboost_updated.zip -d project && cd project && npm install --legacy-peer-deps && npm run build"
-  publish = "project/.next"
-  functions = "project/.netlify/functions"
+[uild]
+command = "unzip -o linkboost_updated.zip -d project && cd project/linkboost && npm install --legacy-peer-deps && npm run build"
+publish = "project/linkboost/.next"
+functions = "project/linkboost/.netlify/functions"
 
 [build.environment]
-  NODE_VERSION = "20"
+NODE_VERSION = "20"
